[package]
name = "robot_vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "*" }
tokio = { version = "*", features = ["full"] }
serde =  { version = "*" }
serde_json = { version = "*" }